# nih_plug_wgpu_example

./: .gitignore  Cargo.toml  README.md  bundler.toml
src/: editor.rs  lib.rs  render.rs  shader.wgsl
